--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require": {
         "php": "^7.0",
         "commercetools/php-sdk": "^1.4",
-        "bestit/commercetools-async-pool": "^0.3.0",
+        "bestit/commercetools-async-pool": "^1",
         "symfony/symfony": "^3.1"
     },
     "require-dev": {
@@ -25,5 +25,5 @@
             "email": "lange@bestit-online.de"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
