--- a/.gitignore
+++ b/.gitignore
@@ -46,18 +46,7 @@
 
 # Backup entities generated with doctrine:generate:entities command
 */Entity/*~
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dataSources/
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
-.idea/gradle.xml
-.idea/libraries
-.idea/mongoSettings.xml
+.idea
 *.iws
 /out/
 .idea_modules/
