--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require": {
         "php": "^7.0",
         "commercetools/php-sdk": "^1.4",
-        "bestit/commercetools-async-pool": "^1 || ^2",
+        "bestit/commercetools-async-pool": "^1 || ^2 || ^3",
         "symfony/symfony": "^3.1"
     },
     "require-dev": {
